# code-chatter

./: .gitignore
backend/: .gitignore  README.md  diagnose_azure.py  pyproject.toml  start.py  test_chatbot.py
backend/app/: main.py
backend/app/api/v1/: api.py  deps.py
backend/app/api/v1/endpoints/: chat.py  chatbot.py  data_processing.py  health.py  management.py  tasks.py
backend/app/config/: settings.py
backend/app/core/: logging.py  utils.py
backend/app/models/: schemas.py
backend/app/services/: background_tasks.py  chat.py  chatbot.py  document_processor.py  file_processor.py  repository.py  vector_store.py
frontend/: bun.lockb  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chatbot/: page.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatInterface.tsx  ChatMessages.tsx  MessageBubble.tsx
frontend/src/components/chatbot/: ChatbotInterface.tsx
frontend/src/components/dashboard/: StatusDashboard.tsx
frontend/src/components/ui/: code-block.tsx  markdown-content.tsx  navbar.tsx
frontend/src/components/upload/: FileUploadZone.tsx
frontend/src/contexts/: AppContext.tsx  ChatContext.tsx
frontend/src/services/: api.ts  config.ts  http-client.ts
frontend/src/types/: index.ts
